src/components/icon/icon.scss
:host {
    background-color: rgba(0, 0, 0, 0);
    display: inline-block;

    svg {
        fill: currentColor;
        height: 100%;
        pointer-events: none;
        width: 100%;
    }
}

:host([hidden]) {
    display: none;
}

:host([size="x-small"]) {
    &,
    > div {
        height: 1.5rem;
        width: 1.5rem;
    }
}
:host([size="small"]) {
    &,
    > div {
        height: 2rem;
        width: 2rem;
    }
}
:host([size="medium"]) {
    &,
    > div {
        height: 3rem;
        width: 3rem;
    }
}
:host([size="large"]) {
    &,
    > div {
        height: 5.6rem;
        width: 5.6rem;
    }
}

